// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransactionIcon /> should have the color #52BD94 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3.2rem;
  overflow: hidden;
  width: 3.2rem;
  background-color: #52BD94;
}

<div
  class="c0"
  data-testid="arrow-icon"
  type="income"
>
  <svg
    class="c1 icon"
    fill="currentColor"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon
    </title>
    <path
      d="M14 5.5h7a1 1 0 0 1 1 .88v7.12a1 1 0 0 1-2 .12V8.9l-7.3 7.3a1 1 0 0 1-1.31.08l-.1-.08L9 13.9l-5.28 5.3a1 1 0 0 1-1.5-1.32l.08-.1 6-6a1 1 0 0 1 1.32-.08l.1.08L12 14.1l6.58-6.59H14a1 1 0 0 1-.99-.88V6.5a1 1 0 0 1 .88-1H21h-7Z"
    />
  </svg>
</div>
`;

exports[`<TransactionIcon /> should have the color #D14343 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3.2rem;
  overflow: hidden;
  width: 3.2rem;
  background-color: #D14343;
  -webkit-transform: scale(-1) rotate(270deg);
  -ms-transform: scale(-1) rotate(270deg);
  transform: scale(-1) rotate(270deg);
}

<div
  class="c0"
  data-testid="arrow-icon"
  type="expense"
>
  <svg
    class="c1 icon"
    fill="currentColor"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon
    </title>
    <path
      d="M14 5.5h7a1 1 0 0 1 1 .88v7.12a1 1 0 0 1-2 .12V8.9l-7.3 7.3a1 1 0 0 1-1.31.08l-.1-.08L9 13.9l-5.28 5.3a1 1 0 0 1-1.5-1.32l.08-.1 6-6a1 1 0 0 1 1.32-.08l.1.08L12 14.1l6.58-6.59H14a1 1 0 0 1-.99-.88V6.5a1 1 0 0 1 .88-1H21h-7Z"
    />
  </svg>
</div>
`;
